Updated styles to avoid overlapping titles and format labels

--- a/CkanDotNet.Web/Content/Theme/Denver/Styles.css
+++ b/CkanDotNet.Web/Content/Theme/Denver/Styles.css
@@ -210,6 +210,7 @@ a:active, a:hover
 {
     font-size: 12px;
     font-weight: bold;
+    width: 300px;
 }
 
 .result-date
